const { spawn } = require("child_process");
const path = require("path");
const fs = require("fs");
const os = require("os");

const TEST_APP_ROOT = path.join(__dirname, "integration-test-app");
const GEN_DIR = path.join(TEST_APP_ROOT, "gen");
const ORD_GEN_DIR = path.join(GEN_DIR, "srv");
const ORD_DOC_PATH = path.join(ORD_GEN_DIR, "ord-document.json");

function fixLastUpdateForStableTest(ord) {
    (ord.consumptionBundles || []).find((cb) => {
        cb.lastUpdate = "2026-05-04T13:45:01+01:00";
    });
    (ord.eventResources || []).find((er) => {
        er.lastUpdate = "2026-05-04T13:45:01+01:00";
    });
    (ord.apiResources || []).find((ar) => {
        ar.lastUpdate = "2026-05-04T13:45:01+01:00";
    });

    return ord;
}

/**
 * Execute cds build command and return result
 * @param {string} cwd - Working directory
 * @param {string} [configFile] - Optional path to CDS config file
 */
function runCdsBuild(cwd, configFile) {
    return new Promise((resolve) => {
        const env = { ...process.env };
        if (configFile) {
            env.CDS_CONFIG = configFile;
        }

        const buildProcess = spawn("npx", ["cds", "build", "--for", "ord"], {
            cwd,
            env,
            stdio: ["ignore", "pipe", "pipe"],
        });

        let stdout = "";
        let stderr = "";

        buildProcess.stdout.on("data", (data) => {
            stdout += data.toString();
        });

        buildProcess.stderr.on("data", (data) => {
            stderr += data.toString();
        });

        buildProcess.on("close", (code) => {
            resolve({ code, stdout, stderr });
        });
    });
}

/**
 * Clean up generated files
 */
function cleanupDir(dir) {
    if (fs.existsSync(dir)) {
        fs.rmSync(dir, { recursive: true, force: true });
    }
}

describe("ORD Build Integration Tests", () => {
    describe("Successful Build", () => {
        let buildResult;
        let ordDocument;

        beforeAll(async () => {
            cleanupDir(GEN_DIR);
            buildResult = await runCdsBuild(TEST_APP_ROOT);
            if (fs.existsSync(ORD_DOC_PATH)) {
                ordDocument = JSON.parse(fs.readFileSync(ORD_DOC_PATH, "utf-8"));
            }
        }, 60000);

        afterAll(() => {
            cleanupDir(GEN_DIR);
        });

        test("should exit with code 0", () => {
            expect(buildResult.code).toBe(0);
        });

        test("should generate ord-document.json", () => {
            expect(fs.existsSync(ORD_DOC_PATH)).toBe(true);
            expect(fs.statSync(ORD_DOC_PATH).size).toBeGreaterThan(0);
            expect(fixLastUpdateForStableTest(JSON.parse(fs.readFileSync(ORD_DOC_PATH, "utf-8")))).toMatchSnapshot();
        });

        test("should have correct ORD document structure", () => {
            expect(ordDocument).toHaveProperty("openResourceDiscovery");
            expect(ordDocument).toHaveProperty("apiResources");
            expect(ordDocument).toHaveProperty("eventResources");
            expect(ordDocument).toHaveProperty("packages");
            expect(ordDocument).toHaveProperty("perspective");
            expect(ordDocument).toHaveProperty("describedSystemVersion");
        });

        test("should generate API resource definition files with non-zero size", () => {
            expect(ordDocument.apiResources.length).toBeGreaterThan(0);

            for (const apiResource of ordDocument.apiResources) {
                expect(apiResource.resourceDefinitions).toBeDefined();
                expect(apiResource.resourceDefinitions.length).toBeGreaterThan(0);

                for (const resDef of apiResource.resourceDefinitions) {
                    const filePath = path.join(ORD_GEN_DIR, resDef.url);
                    expect(fs.existsSync(filePath)).toBe(true);
                    expect(fs.statSync(filePath).size).toBeGreaterThan(0);
                }
            }
        });

        test("should generate Event resource definition files with non-zero size", () => {
            expect(ordDocument.eventResources.length).toBeGreaterThan(0);

            for (const eventResource of ordDocument.eventResources) {
                expect(eventResource.resourceDefinitions).toBeDefined();
                expect(eventResource.resourceDefinitions.length).toBeGreaterThan(0);

                for (const resDef of eventResource.resourceDefinitions) {
                    const filePath = path.join(ORD_GEN_DIR, resDef.url);
                    expect(fs.existsSync(filePath)).toBe(true);
                    expect(fs.statSync(filePath).size).toBeGreaterThan(0);
                }
            }
        });

        test("should include @OpenAPI.servers annotation in OpenAPI document", () => {
            const testServiceApi = ordDocument.apiResources.find((api) => api.ordId.includes("TestService"));
            expect(testServiceApi).toBeDefined();

            const openApiDef = testServiceApi.resourceDefinitions.find((def) => def.url.endsWith(".oas3.json"));
            expect(openApiDef).toBeDefined();

            const openApiPath = path.join(ORD_GEN_DIR, openApiDef.url);
            const openApiContent = JSON.parse(fs.readFileSync(openApiPath, "utf-8"));

            expect(openApiContent.servers).toBeDefined();
            expect(openApiContent.servers).toHaveLength(2);
            expect(openApiContent.servers[0].url).toBe("https://test-service.api.example.com");
            expect(openApiContent.servers[1].url).toBe("https://test-service-sandbox.api.example.com");
        });

        test("should generate IntegrationDependency for external Data Products", () => {
            expect(ordDocument).toHaveProperty("integrationDependencies");
            expect(ordDocument.integrationDependencies).toHaveLength(1);

            const integrationDep = ordDocument.integrationDependencies[0];
            expect(integrationDep.ordId).toContain(":integrationDependency:externalDependencies:v1");
            expect(integrationDep.title).toBe("External Dependencies");
            expect(integrationDep.version).toBe("1.0.0");
            expect(integrationDep.releaseStatus).toBe("active");
            expect(integrationDep.visibility).toBe("public");
            expect(integrationDep.mandatory).toBe(false);
            expect(integrationDep.partOfPackage).toContain(":package:");
        });

        test("should have correct IntegrationDependency aspects with @ORD.Extensions", () => {
            const integrationDep = ordDocument.integrationDependencies[0];
            expect(integrationDep.aspects).toHaveLength(2);

            const saiAspect = integrationDep.aspects.find((a) => a.apiResources[0].ordId.includes("test.sai"));
            expect(saiAspect).toBeDefined();
            expect(saiAspect.title).toBe("Test SAI Supplier API");
            expect(saiAspect.description).toBe("Integration with Test SAI Supplier Data Product");
            expect(saiAspect.mandatory).toBe(false);
            expect(saiAspect.apiResources[0].ordId).toBe("test.sai:apiResource:Supplier:v1");
            expect(saiAspect.apiResources[0].minVersion).toBe("1.0.0");

            const s4Aspect = integrationDep.aspects.find((a) => a.apiResources[0].ordId.includes("test.s4"));
            expect(s4Aspect).toBeDefined();
            expect(s4Aspect.title).toBe("Test S4 Supplier API");
            expect(s4Aspect.description).toBe("Integration with Test S4 Supplier Data Product");
        });
    });

    describe("IntegrationDependency with cdsrc customization", () => {
        let buildResult;
        let ordDocument;
        const CDSRC_CONFIG = path.join(TEST_APP_ROOT, ".cdsrc.integrationDep.json");

        beforeAll(async () => {
            cleanupDir(GEN_DIR);
            buildResult = await runCdsBuild(TEST_APP_ROOT, CDSRC_CONFIG);
            if (fs.existsSync(ORD_DOC_PATH)) {
                ordDocument = fixLastUpdateForStableTest(JSON.parse(fs.readFileSync(ORD_DOC_PATH, "utf-8")));
            }
        }, 60000);

        afterAll(() => {
            cleanupDir(GEN_DIR);
        });

        test("should exit with code 0", () => {
            expect(buildResult.code).toBe(0);
        });

        test("should match snapshot", () => {
            expect(ordDocument).toMatchSnapshot();
        });

        test("should apply cdsrc customization to IntegrationDependency", () => {
            expect(ordDocument).toHaveProperty("integrationDependencies");
            expect(ordDocument.integrationDependencies).toHaveLength(1);

            const integrationDep = ordDocument.integrationDependencies[0];
            expect(integrationDep.title).toBe("Custom External Dependencies");
            expect(integrationDep.version).toBe("2.0.0");
            expect(integrationDep.releaseStatus).toBe("beta");
            expect(integrationDep.visibility).toBe("internal");
            expect(integrationDep.description).toBe("Custom description from cdsrc");
        });

        test("should preserve aspects with @ORD.Extensions even with cdsrc customization", () => {
            const integrationDep = ordDocument.integrationDependencies[0];
            expect(integrationDep.aspects).toHaveLength(2);

            const saiAspect = integrationDep.aspects.find((a) => a.apiResources[0].ordId.includes("test.sai"));
            expect(saiAspect).toBeDefined();
            expect(saiAspect.title).toBe("Test SAI Supplier API");
        });
    });

    describe("IntegrationDependency with custom.ord.json merging", () => {
        let buildResult;
        let ordDocument;
        const CDSRC_CONFIG = path.join(TEST_APP_ROOT, ".cdsrc.customord.json");

        beforeAll(async () => {
            cleanupDir(GEN_DIR);
            buildResult = await runCdsBuild(TEST_APP_ROOT, CDSRC_CONFIG);
            if (fs.existsSync(ORD_DOC_PATH)) {
                ordDocument = fixLastUpdateForStableTest(JSON.parse(fs.readFileSync(ORD_DOC_PATH, "utf-8")));
            }
        }, 60000);

        afterAll(() => {
            cleanupDir(GEN_DIR);
        });

        test("should exit with code 0", () => {
            expect(buildResult.code).toBe(0);
        });

        test("should match snapshot", () => {
            expect(ordDocument).toMatchSnapshot();
        });

        test("should merge custom.ord.json patches to IntegrationDependency", () => {
            expect(ordDocument).toHaveProperty("integrationDependencies");
            expect(ordDocument.integrationDependencies).toHaveLength(1);

            const integrationDep = ordDocument.integrationDependencies[0];
            expect(integrationDep.title).toBe("Patched External Dependencies");
            expect(integrationDep.shortDescription).toBe("Patched via custom.ord.json");
            expect(integrationDep.mandatory).toBe(true);
        });

        test("should preserve non-patched properties from generated IntegrationDependency", () => {
            const integrationDep = ordDocument.integrationDependencies[0];
            // These should remain from the generated resource
            expect(integrationDep.version).toBe("1.0.0");
            expect(integrationDep.releaseStatus).toBe("active");
            expect(integrationDep.visibility).toBe("public");
        });

        test("should preserve aspects from generated IntegrationDependency", () => {
            const integrationDep = ordDocument.integrationDependencies[0];
            expect(integrationDep.aspects).toHaveLength(2);

            const saiAspect = integrationDep.aspects.find((a) => a.apiResources[0].ordId.includes("test.sai"));
            expect(saiAspect).toBeDefined();
            expect(saiAspect.title).toBe("Test SAI Supplier API");
        });
    });

    describe("Failed Build", () => {
        let buildResult;
        let tempDir;

        beforeAll(async () => {
            // Create a temporary empty directory to trigger build failure
            // (no CDS project, no ORD plugin configured)
            tempDir = fs.mkdtempSync(path.join(os.tmpdir(), "ord-build-test-"));
            buildResult = await runCdsBuild(tempDir);
        }, 60000);

        afterAll(() => {
            // Clean up temporary directory
            if (tempDir && fs.existsSync(tempDir)) {
                fs.rmSync(tempDir, { recursive: true, force: true });
            }
        });

        test("should exit with non-zero code", () => {
            expect(buildResult.code).not.toBe(0);
        });

        test("should output error message", () => {
            const output = buildResult.stdout + buildResult.stderr;
            expect(output.toLowerCase()).toMatch(/error/i);
        });
    });
});
